# bazel-go-googleapis

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
cmd/client/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
proto/greet/v1/: BUILD.bazel  greet.proto
