"""
This module contains a client/server solution using the following technologies:
"""

module(
    name = "bazel-go-googleapis",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.36.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "googleapis", version = "0.0.0-20240326-1c8d509c5", dev_dependency = True)
bazel_dep(name = "grpc", version = "1.48.1", dev_dependency = True)
bazel_dep(name = "protobuf", version = "26.0", dev_dependency = True, repo_name = "com_google_protobuf")
bazel_dep(name = "rules_go", version = "0.47.1", dev_dependency = True)
bazel_dep(name = "rules_proto", version = "6.0.0", dev_dependency = True)

single_version_override(
    module_name = "rules_go",
    patches = ["import.patch"],
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.3")

# Register the Go SDK installed on the host.
go_sdk.host()

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_rs_zerolog",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_net",
)
