load("@rules_go//proto:def.bzl", "go_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "greetv1_proto",
    srcs = ["greet.proto"],
    visibility = ["//visibility:public"],
    deps = [
        # `bazel query 'kind(proto_library, @com_google_protobuf//:all)'`
        "@com_google_protobuf//:timestamp_proto",
    ],
)

# Generate the greet.pb.go file and the greet_grpc.pb.go file.
go_grpc_library(
    name = "greetv1_go_proto",
    importpath = "github.com/abitofhelp/bazel-go-googleapis/gen/greet/v1",
    proto = ":greetv1_proto",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":greetv1_go_proto",
    visibility = ["//visibility:public"],
)

